tests/bad/missing_curlies.oc
/// fail: Unexpected end of file

def main() {
    println("Hello, World!\n")